yaml/demowebsite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demobackend
  namespace: dotnet-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demobackend
  template:
    metadata:
      labels:
        app: demobackend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: demobackend
        image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: demobackend
  namespace: dotnet-project
spec:
  ports:
  - port: 6379
  selector:
    app: demobackend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebsite
  namespace: dotnet-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demowebsite
  template:
    metadata:
      labels:
        app: demowebsite
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: demowebsite
        image: akscrv2.azurecr.io/demowebsite:v1.3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demowebsite
  namespace: dotnet-project
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demowebsite
